<resources>
    <string name="app_name">QuickShop</string>
    <string name="facebook_app_id">479104362292883</string>
    <string name="projectPackage">proyecto.cursoandroid.com.jairo.centaurosolutions.beaconkontackttest3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="format_connect">Connect %s</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="ok">Ok</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="power_level">Power Level</string>
    <string name="advertising_interval">Advertising Interval</string>
    <string name="set_password">Set password</string>
    <string name="model_name">Model name</string>
    <string name="proximity">Proximity</string>
    <string name="transmission_power">Transmission Power</string>
    <string name="timers">Timers</string>
    <string name="access_control">Access Control</string>
    <string name="battery">Battery</string>
    <string name="battery_level">Battery Level</string>
    <string name="device_information">Device Information</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="hardware_revision">Hardware Revision</string>
    <string name="reset">Reset</string>
    <string name="reset_device">Reset Device</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profiles">Profiles</string>
    <string name="accept_profile">Accept Profile</string>
    <string name="pending_configs">Pending configurations</string>
    <string name="apply_config">Apply Configuration</string>
    <string name="generate">Generate</string>
    <string name="beacon_unique_id">Beacon Unique Id</string>
    <string name="submit">Submit</string>
    <string name="device_name">Device Name</string>
    <string name="rssi">Rssi</string>
    <string name="power">Power</string>
    <string name="address">MAC address</string>
    <string name="firmware_version">Firmware version</string>
    <string name="unexpected_error_monitoring_start">Unexpected error occurred during monitoring start</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="unexpected_error_connection">Unexpected error occurred during establishing connection to Beacon Service</string>
    <string name="background_scan">Background Scan</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="scan_started">Scan started</string>
    <string name="region_entered">%1$s entered</string>
    <string name="region_abandoned">%1$s abandoned</string>
    <string name="beacon_appeared">%1$s appeared</string>
    <string name="appeared_beacon_info">Device found:\n%1$s\nProximityUUID:\n%2$s\nMajor:\n%3$d\nMinor:\n%4$d\nDistance:\n%5$.1f m (%6$s)</string>
    <string name="foreground_background_scan">foreground/background scan</string>
    <string name="syncing_config">Syncing config…</string>
    <string name="response_status">HttpResponse status: %1$d</string>
    <string name="configuration">Configuration</string>
    <string name="simultaneous_scans">Simultaneous scan</string>
    <string name="create_manager">Create manager</string>
    <string name="count_of_managers">Count of managers: %1$d</string>
    <string name="distance">Distance &lt; </string>
    <string name="incorrect_distance">Distance is not a number</string>
    <string name="manager_id">Manager id: %1$d</string>
    <string name="beacons_found_count">Beacons found: %1$d</string>
    <string name="distance_filter">Distance &lt; %1$d</string>
    <string name="remove_manager">Remove manager</string>
    <string name="syncable_connection">Syncable connection</string>
    <string name="range_beacons">Range beacons [iBeacon]</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="disable_bluetooth">Disable bluetooth</string>
    <string name="namespace">Namespace: %1$s</string>
    <string name="instance">Instance: %1$s</string>
    <string name="url">Url: %1$s</string>
    <string name="temperature">Temperature: %1$f \u00b0C</string>
    <string name="battery_voltage">Battery voltage: %1$d mV</string>
    <string name="pdu_count">Pdu count: %1$d</string>
    <string name="time_since_power_up">Time since power up: %1$d seconds</string>
    <string name="telemetry_version">Telemetry version: %1$d</string>
    <string name="tx_power_level">Power: %1$d dBm</string>
    <string name="range_all_beacons">Range all types</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_activity__principal">Activity Principal</string>
    <string name="title_activity_tab_promociones">TabPromocionesActivity</string>
    <string name="title_activity_elemento_lista_promo">ElementoListaPromoActivity</string>
    <string name="promo_name">Nombre Promo</string>
    <string name="promo_description">Descripción corta de la promoción</string>
    <string name="promo_points">75</string>
    <string name="title_activity_promo_detail">PromoDetailActivity</string>
    <string name="title_activity_main_login">MainLoginActivity</string>
    <string name="title_activity_login_activity_main">LoginActivityMain</string>
    <string name="mail">Correo Electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="restorePass">Recuperar Contraseña</string>
    <string name="register">Registrate aqui</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="user">Usuario</string>
    <string name="keppLoguin">Mantener Logueado</string>
    <string name="abrir">abrir</string>
    <string name="cerrar">cerrar</string>
    <string name="inicilizate">Iniciando Modulos...</string>
    <string name="gender">Sexo</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="birthdaynotset">Presione acá para asignar</string>
    <string name="preferences">Preferencias</string>
    <string name="send_invitation">Invitar mediante</string>
    <string name="profile">Perfil</string>
    <string name="invitation">Invitar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="nav_options">
        <item>Perfil</item>
        <item>Preferencias</item>
        <item>Lista de Deseos</item>
        <item>Invitar</item>
        <item>Puntos</item>
        <item>Preguntas Frecuentes</item>
        <item>Notificaciones</item>
        <item>Cerrar Sesión</item>
    </string-array>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_user_register">UserRegister</string>
    <string name="title_activity_detail__promo">Detail_Promo</string>
    <string name="WebService_Category">http://bcategorydevel.cfapps.io/</string>
    <string name="WebService_Device">http://bdevicedevel.cfapps.io/</string>
    <string name="WebService_MerchantProduct">http://bmerchantproductdevel.cfapps.io/</string>
    <string name="WebService_MerchantProfile">http://bmerchantprofiledevel.cfapps.io/</string>
    <string name="WebService_Mobile">http://bmobiledevel.cfapps.io/</string>
    <string name="WebService_OfferHistory">http://bofferhistorydevel.cfapps.io/</string>
    <string name="WebService_Promo">http://bpromodevel.cfapps.io/</string>
    <string name="WebService_User">http://buserdevel.cfapps.io/</string>
    <string name="WebService_Utils">http://butilsdevel.cfapps.io/</string>
    <string name="WebServiceFaq">http://bfaqdevel.cfapps.io/</string>
    <string name="WebServiceHistoryPointsUser">http://butilsdevel.cfapps.io/utils/user/getPointsData/</string>
    <string name="WebService_VisitorHistory">http://bvisitorhistorydevel.cfapps.io/</string>
    <string name="WebServicePoints">http://bpointsdevel.cfapps.io/</string>
    <string name="title_activity_pull_notifications">PullNotificationsActivity</string>
    <string name="title_activity_login__options">Login_Options</string>
    <string name="totalPointsLabel">%s</string>
    <string name="save">Guardar</string>
    <string name="regalarPuntos">Enviale este código a la persona que le quieres regalar los puntos.</string>
    <string name="confirmacionPuntos">Felicidades, has obtenido un total de %s puntos para redimir en tus compras.</string>
    <string name="expiracionPuntos">Este código expira en: </string>
    <string name="principalMenuButton">Ir al menú principal</string>
    <string name="sendMessageButton">Enviar mensaje</string>
    <string name="login_userlocal">localuser</string>
    <string name="login_facebook">facebook</string>
    <string name="getProfilePictureFaceBook">http://graph.facebook.com/v2.6/%s/picture?width=130</string>
    <string name="title_activity_profile_activity">profile_activity</string>
    <string name="title_activity_activity_profile">activity_profile</string>
    <string name="link"> https://1wek.app.link/313V3QLQWv</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="wishList">Lista de Deseos</string>
    <string name="points">Puntos</string>
    <string name="giftPoints">Usted tiene un total de %s pts disponibles para regalar</string>
    <string name="changePoints">Usted tiene un total de %s pts disponibles para redimir</string>
    <string name="obtainPoints">Obtén aquí tus puntos, ingresando el código!</string>
    <string name="redimirPuntos">Muestra este código en cajas, a la hora de realizar tu pago, para redimir puntos !</string>
    <string name="walkinText">Visitas</string>
    <string name="textoIntentScan">Código de Barras</string>
    <string name="codigoNoEscaneado">Código no escaneado</string>
    <string name="colonSymbol">₡%s</string>
    <string name="pointsSymbol">¤%s</string>
    <string name="facebookImage">Para actualizar su foto actualice la de su perfil de facebook</string>
    <string name="selectedPicture">Imagen Seleccionada</string>
    <string name="dontSelectedImage">No ha seleccionado ninguna imagen aún</string>
    <string name="somethingWrong">Lo sentimos, algo salio mal.</string>
    <string name="pressBackAgainToExit">Presione atrás de nuevo para salir</string>
    <string name="messageShareApp">Has escuchado acerca de QuickShop?</string>
    <string name="dontHavePoints">Aún no has obtenido puntos</string>
    <string name="shareWith">Compartir mediante:</string>
    <string name="correctlyAdd">Añadido correctamente</string>
    <string name="productExist">El producto ya existe en la lista de deseos</string>
    <string name="userData">Usuario y contraseña requeridos</string>
    <string name="usuarioDesabilitado">Usuario desabilitado</string>
    <string name="correctlyDelete">Eliminado correctamente</string>
    <string name="emptyList">La lista se encuentra vacía</string>
    <string name="correctlyCreateUser">Usuario creado correctamente</string>
    <string name="dontHavePointsNecessary">No tiene la cantidad de puntos necesarios para enviar esa cantidad</string>
    <string name="process">Procesando la solicitud</string>
    <string name="pointsMount">Favor ingresar un monto de puntos</string>
    <string name="sendCode">Enviar el código</string>
    <string name="purchasePointsText">C / %s</string>
    <string name="minPointsRequire">La cantidad de puntos no supera el minimo requerido</string>
</resources>