<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"


    android:background="@color/fondo"
        tools:context="proyecto.cursoandroid.com.jairo.centaurosolutions.beaconkontackttest3.UserRegister">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center"
           >


            <EditText
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:hint="@string/user"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="8dp"
                android:textColor="@color/DarkBlue"
                android:inputType="text"
                android:textColorHint="@color/LigthBluehint"
                android:layout_marginBottom="5dp"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:textColorHint="@color/LigthBluehint"
                android:scaleType="fitXY"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="5dp"
                android:textColor="@color/DarkBlue"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:textColorHint="@color/LigthBluehint"
                android:scaleType="fitXY"
                android:textColor="@color/DarkBlue"
                android:hint="@string/phone"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="5dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:textColorHint="@color/LigthBluehint"
                android:scaleType="fitXY"
                android:textColor="@color/DarkBlue"
                android:hint="@string/name"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="5dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:textColor="@color/DarkBlue"
                android:textColorHint="@color/LigthBluehint"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:hint="@string/lastname"
                android:scaleType="fitXY"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="5dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:textColor="@color/DarkBlue"
                android:textColorHint="@color/LigthBluehint"
                android:hint="@string/email"
                android:paddingLeft="8dp"
                android:scaleType="fitXY"
                android:background="@drawable/edittext_rounded"
                android:layout_marginBottom="5dp"
                android:textSize="15dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/register"
                android:gravity="center"
                android:text="Registrar"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"></Button>
        </LinearLayout>

    </LinearLayout>