<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"


    android:background="@color/fondo"
    tools:context="proyecto.cursoandroid.com.jairo.centaurosolutions.beaconkontackttest3.UserRegister">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="fill_parent"
            android:text="@string/name"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:hint="@string/name"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded"
            android:paddingLeft="8dp"
            android:textColor="@color/DarkBlue"
            android:inputType="text"
            android:textColorHint="@color/LigthBluehint"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="fill_parent"
            android:text="@string/lastname"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/lastname"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:textColorHint="@color/LigthBluehint"
            android:scaleType="fitXY"
            android:textColor="@color/DarkBlue"
            android:hint="@string/lastname"
            android:background="@drawable/edittext_rounded"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />
        <TextView
            android:layout_width="fill_parent"
            android:text="@string/email"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:enabled="false"
            android:textColorHint="@color/LigthBluehint"
            android:scaleType="fitXY"
            android:textColor="@color/selectedTab"
            android:hint="@string/email"
            android:background="@drawable/edittext_rounded"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />
        <TextView
            android:layout_width="fill_parent"
            android:text="@string/gender"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:gravity="center"
                android:checked="true"
                android:textColor="@color/white"

                />
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:src="@drawable/male"/>



            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:checked="false"
                android:textColor="@color/white"

                />
            <ImageView
                android:gravity="right"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/female"/>
        </RadioGroup>
        <TextView
            android:layout_width="fill_parent"
            android:text="@string/birthday"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/buttonbirthday"
            android:layout_width="fill_parent"
            android:enabled="true"
            android:layout_height="40dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:textColorHint="@color/LigthBluehint"
            android:scaleType="fitXY"
            android:textColor="@color/DarkBlue"
            android:hint="@string/user"
            android:background="@drawable/edittext_rounded"
            android:layout_marginBottom="5dp"
            android:text="@string/birthdaynotset" />
        <TextView
            android:layout_width="fill_parent"
            android:text="@string/phone"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:paddingLeft="8dp"
            android:textColorHint="@color/LigthBluehint"
            android:scaleType="fitXY"
            android:textColor="@color/selectedTab"
            android:hint="@string/phone"
            android:background="@drawable/edittext_rounded"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />
        <TextView
            android:layout_width="fill_parent"
            android:text="@string/user"
            android:textSize="20dp"
            android:layout_height="25dp"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:enabled="false"
            android:layout_height="40dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:textColorHint="@color/LigthBluehint"
            android:scaleType="fitXY"
            android:textColor="@color/selectedTab"
            android:hint="@string/user"
            android:background="@drawable/edittext_rounded"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />







    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/register"
            android:gravity="center"
            android:text="Registrar"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"></Button>
    </LinearLayout>

</LinearLayout>
</ScrollView>